--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>First</title>
     </head>
     <body>
-        <p>Hi i'm Aravinth Sivasenthil, this is my website</p>
+        <p>Hi i'm Aravinth Sivasenthil. This is my website</p>
     </body>
 </html>
